# UBC

./: .gitignore  CMakeLists.txt  README.md
assets/: baseValues.txt  dialogs.json  endMessages.json  list.json  quests.json
gui/: dialog.gui  dialogMenu.gui  gameover_menu.gui  genderMenu.gui  igmenu.gui  loadMenu.gui  mainMenu.gui  optionMenu.gui  quest.gui  victory_menu.gui
gui/themes/: UBC.txt
src/: DialogMgr.cpp  DialogMgr.hpp  Exceptions.hpp  Loader.cpp  Loader.hpp  Logger.cpp  Logger.hpp  QuestMgr.cpp  QuestMgr.hpp  Utils.cpp  Utils.hpp  main.cpp
src/DataType/: Rect.hpp  Vector.hpp
src/Input/: Input.cpp  Input.hpp  SFMLJoypad.cpp  SFMLJoypad.hpp  SFMLKeyboard.cpp  SFMLKeyboard.hpp
src/Menu/: DialogMenu.cpp  DialogMenu.hpp  Exceptions.hpp  GameoverMenu.cpp  GameoverMenu.hpp  GenderMenu.cpp  GenderMenu.hpp  InGameMenu.cpp  InGameMenu.hpp  LoadMenu.cpp  LoadMenu.hpp  LoadingMenu.cpp  LoadingMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.hpp  MenuMgr.cpp  MenuMgr.hpp  OptionMenu.cpp  OptionMenu.hpp  VictoryMenu.cpp  VictoryMenu.hpp
src/Rendering/: Screen.cpp  Screen.hpp
src/Resources/: Game.hpp  GameState.hpp  Logger.cpp  Logger.hpp  Resources.cpp  Resources.hpp  Settings.hpp  State.hpp  version.hpp
